# CPP

./: .gitignore  C++.code-workspace  main.file  new_branch.file  test.file  test_branch.file
CMake/: CMakeLists.txt  main.cpp
CMake/src/: calc.cpp  calc.h  complex.cpp  main.cpp
CMake_/: CMakeLists.txt
CMake_/src/: concepts.cpp  deque.cpp  pthreads.cpp
Classes/Arrays/: main  main.cpp
Classes/GuessTheNumber/: main  main.cpp
Example/: theNames.txt
Example/src/: __main.cpp  _functions.h  calc.h  compare.cpp  fstream.cpp  ranges.cpp
FirstSteps/: FirstSteps.code-workspace
FirstSteps/src/: __main.cpp  format.cpp  thread.cpp
MultipleProjects/: MultipleProjects.code-workspace
MultipleProjects/FirstSteps/: CMakeLists.txt  box2d.cpp
MultipleProjects/FirstSteps/src/: Explore_CPP_26.cpp  __main.cpp  _functions.h  beautiful_graphics.cpp  boost_chrono.cpp  boost_locale.cpp  boost_math.cpp  boost_test.cpp  box2d.cpp  calc.cpp  calc.h  format.cpp  fractale.cpp  pack_indexing.cpp  primzahl.cpp  pthreadsFmc.cpp  sdl.cpp  time.cpp  vcpkg.cpp
MultipleProjects/FirstSteps/src/SDL/: 01_hello_SDL.cpp  02_getting_an_image_on_the_screen.cpp  03_event_driven_programming.cpp  04_key_presses.cpp  05_optimized_surface_loading_and_soft_stretching.cpp  06_extension_libraries_and_loading_other_image_formats.cpp  07_texture_loading_and_rendering.cpp  08_geometry_rendering.cpp  09_the_viewport.cpp  10_color_keying.cpp  11_clip_rendering_and_sprite_sheets.cpp  12_color_modulation.cpp  13_alpha_blending.cpp  14_animated_sprites_and_vsync.cpp  15_rotation_and_flipping.cpp  16_true_type_fonts.cpp  17_mouse_events.cpp  18_key_states.cpp  19_gamepads_and_joysticks.cpp  20_force_feedback.cpp  21_sound_effects_and_music.cpp  22_timing.cpp  23_advanced_timers.cpp  24_calculating_frame_rate.cpp  25_capping_frame_rate.cpp  26_motion.cpp  27_collision_detection.cpp  28_per_pixel_collision_detection.cpp  29_circular_collision_detection.cpp  30_scrolling.cpp  31_scrolling_backgrounds.cpp  32_text_input_and_clipboard_handling.cpp  33_file_reading_and_writing.cpp  34_audio_recording.cpp  35_window_events.cpp  36_multiple_windows.cpp  37_multiple_displays.cpp  38_particle_engines.cpp  39_tiling.cpp  40_texture_manipulation.cpp  (+14 more)
MultipleProjects/FirstSteps/src/SDL/rc/: readme.txt
MultipleProjects/FirstSteps/test/: CMakeLists.txt  ExampleTests.cpp
MultipleProjects/HelloWorld1/: calc.cpp  main.cpp
MultipleProjects/HelloWorld2/: main.cpp
MultipleProjects_/FirstSteps/: CMakeLists.txt
MultipleProjects_/FirstSteps/src/: __main.cpp  any.cpp  calc.cpp
Test/src/: main.cpp
